# MT-Sticker-Collecter

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  mt.db  pyproject.toml
app/: crud.py  database.py  main.py  models.py  schemas.py  settings.py
app/static/: admin_script.js  admin_style.css  script.js  style.css
app/templates/: admin.html  leaderboard.html
