[tool.poetry]
name = "mt-sticker-collecter"
version = "0.1.0"
description = ""
authors = ["LeeInGyu <developLee20@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
